--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "flickity": "^2.2.2",
     "joi": "^17.4.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
