--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "App to manage your home budget",
   "main": "app.js",
+  "engines": {
+    "node": "14.15.4"
+  },
   "scripts": {
     "start": "nodemon app"
   },
